Edit LinkedIn link position

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>My Contact Details</h1>
-    <a href="https://www.linkedin.com/in/kritjit/">LinkedIn</a>
+    <a href="https://www.linkedin.com/in/kritjit/">LinkedIn</a><br>
     <form class="" action="mailto:mymail@gmail.com" method="post">
         <label>Your Name:</label>
         <input type="text" name="" value=""><br>
